--- a/package.json
+++ b/package.json
@@ -19,62 +19,62 @@
     "bun-dev": "npx next"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.717.0",
-    "@aws-sdk/s3-request-presigner": "^3.717.0",
+    "@aws-sdk/client-s3": "^3.726.0",
+    "@aws-sdk/s3-request-presigner": "^3.726.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@hookform/resolvers": "^3.9.1",
-    "@mantine/charts": "^7.15.1",
-    "@mantine/core": "^7.15.1",
-    "@mantine/form": "^7.15.1",
-    "@mantine/hooks": "^7.15.1",
-    "@mantine/notifications": "^7.15.1",
-    "@mantine/tiptap": "^7.15.1",
+    "@hookform/resolvers": "^3.10.0",
+    "@mantine/charts": "^7.15.3",
+    "@mantine/core": "^7.15.3",
+    "@mantine/form": "^7.15.3",
+    "@mantine/hooks": "^7.15.3",
+    "@mantine/notifications": "^7.15.3",
+    "@mantine/tiptap": "^7.15.3",
     "@marsidev/react-turnstile": "^0.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
-    "@react-email/container": "0.0.11",
-    "@react-email/html": "0.0.7",
-    "@react-email/section": "0.0.11",
-    "@react-email/text": "0.0.7",
-    "@swc/core": "1.5.25",
-    "@tiptap/extension-highlight": "^2.10.4",
-    "@tiptap/extension-link": "^2.10.4",
-    "@tiptap/extension-subscript": "^2.10.4",
-    "@tiptap/extension-superscript": "^2.10.4",
-    "@tiptap/extension-table": "^2.10.4",
-    "@tiptap/extension-table-cell": "^2.10.4",
-    "@tiptap/extension-table-header": "^2.10.4",
-    "@tiptap/extension-table-row": "^2.10.4",
-    "@tiptap/extension-text-align": "^2.10.4",
-    "@tiptap/extension-underline": "^2.10.4",
-    "@tiptap/pm": "^2.10.4",
+    "@react-email/container": "^0.0.11",
+    "@react-email/html": "^0.0.7",
+    "@react-email/section": "^0.0.11",
+    "@react-email/text": "^0.0.7",
+    "@swc/core": "^1.10.4",
+    "@tiptap/extension-highlight": "^2.11.0",
+    "@tiptap/extension-link": "^2.11.0",
+    "@tiptap/extension-subscript": "^2.11.0",
+    "@tiptap/extension-superscript": "^2.11.0",
+    "@tiptap/extension-table": "^2.11.0",
+    "@tiptap/extension-table-cell": "^2.11.0",
+    "@tiptap/extension-table-header": "^2.11.0",
+    "@tiptap/extension-table-row": "^2.11.0",
+    "@tiptap/extension-text-align": "^2.11.0",
+    "@tiptap/extension-underline": "^2.11.0",
+    "@tiptap/pm": "^2.11.0",
     "@tiptap/react": "2.9.1",
-    "@tiptap/starter-kit": "^2.10.4",
+    "@tiptap/starter-kit": "^2.11.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/bun": "^1.1.14",
+    "@types/bun": "^1.1.16",
     "@types/marked": "^5.0.2",
     "@types/md5": "^2.3.5",
     "@types/nodemailer": "^6.4.17",
     "argon2": "^0.31.2",
     "aws-sdk": "^2.1692.0",
-    "babel-plugin-react-compiler": "^19.0.0-beta-201e55d-20241215",
+    "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cypress": "^13.17.0",
     "express-jwt": "^8.5.1",
     "formidable": "^3.5.2",
     "framer-motion": "^10.18.0",
-    "image-size": "^1.1.1",
+    "image-size": "^1.2.0",
     "marked": "^11.2.0",
     "marked-gfm-heading-id": "^3.2.0",
     "marked-mangle": "^1.1.10",
     "md5": "^2.3.0",
-    "mysql2": "^3.11.5",
+    "mysql2": "^3.12.0",
     "mysql2-promise": "^0.1.4",
-    "next": "15.0.3",
+    "next": "^15.1.4",
     "next-auth": "^4.24.11",
     "next-auth-client": "^1.5.0",
     "next-mdx-remote": "^4.4.1",
@@ -91,9 +91,9 @@
     "react-dom": "^19.0.0",
     "react-email": "2.0.0",
     "react-hook-form": "^7.54.2",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.0.3",
     "recharts": "^2.15.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.1",
@@ -106,7 +106,7 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "superjson": "^1.13.3",
-    "swr": "^2.2.5",
+    "swr": "^2.3.0",
     "tailwindcss": "^3.4.17",
     "tiptap-markdown": "^0.8.10",
     "use-async-effect": "^2.2.7",
@@ -114,13 +114,12 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "latest",
-    "@percy/cli": "^1.30.5",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -132,7 +131,7 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^15.1.2",
+    "eslint-config-next": "^15.1.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.15.2",
     "eslint-plugin-import": "^2.31.0",
@@ -141,7 +140,7 @@
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
@@ -152,7 +151,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.11",
+    "lint-staged": "^15.3.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
@@ -161,7 +160,7 @@
     "rimraf": "^5.0.10",
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^2.0.9",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   },
   "release": {
     "branches": [
